fixed overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
-  overflow-x: hidden; }
+  font-size: 62.5%; }
 
 body {
   min-height: 100vh;
@@ -86,7 +85,8 @@ button {
 /* CONTAINER */
 .container {
   margin-inline: auto;
-  padding: 0 4rem; }
+  padding: 0 4rem;
+  overflow-x: hidden; }
   @media screen and (min-width: 1440px) {
     .container {
       max-width: 1104px; } }
